fix-event-account

--- a/scss/trade.css
+++ b/scss/trade.css
@@ -164,16 +164,39 @@ body {
 }
 
 .header__account .account-dropdown {
-  position: absolute;
+  position: fixed;
   top: 61px;
-  right: -210px;
-  width: 210px;
-  height: 240px;
+  right: -300px;
+  width: 195px;
+  height: 206px;
   z-index: 2;
-  border-radius: 5px;
+  border-radius: 3px;
   background-color: #292d38;
-  transition: right 500ms;
-  display: none;
+  transition: right 550ms;
+  color: #e2e2e2;
+  display: flex;
+  flex-direction: column;
+  padding: 10px 20px;
+}
+.header__account .account-dropdown .menu-item-container {
+  display: flex;
+  align-items: center;
+  padding: 9px 0px;
+}
+.header__account .account-dropdown .menu-item-container .menu-item-name {
+  padding-left: 15px;
+}
+.header__account .account-dropdown .menu-item-container .menu-item-name:hover {
+  color: #e7ab21;
+}
+.header__account .account-dropdown .menu-item-container:last-child {
+  margin-top: 10px;
+  padding: 20px 0px;
+  margin-top: 14px;
+  border-top: 1px solid #313645;
+}
+.header__account .account-dropdown .menu-item-container:last-child .menu-item-name {
+  color: #cf422f;
 }
 .header__account .account-dropdown .menu-item-logo {
   height: 15px;
@@ -184,23 +207,6 @@ body {
 }
 .header__account .account-dropdown.active {
   right: 10px;
-  width: 230px;
-  height: 240px;
-  color: #e2e2e2;
-  display: flex;
-  flex-direction: column;
-  padding: 10px 20px;
-}
-.header__account .account-dropdown.active .menu-item-container {
-  display: flex;
-  align-items: center;
-  padding: 9px 0px;
-}
-.header__account .account-dropdown.active .menu-item-container .menu-item-name {
-  padding-left: 15px;
-}
-.header__account .account-dropdown.active .menu-item-container .menu-item-name:hover {
-  color: #e7ab21;
 }
 .header__account .account-dropdown.active .menu-item-container:last-child {
   margin-top: 10px;
