--- a/scss/main.scss
+++ b/scss/main.scss
@@ -629,32 +629,17 @@ header {
   display: none;
 }
 
-// css khi click vào tài khoản
 .header__account {
   .account-dropdown {
-    position: absolute;
+    position: fixed;
     top: 61px;
-    right: -210px;
-    width: 210px;
-    height: 240px;
+    right: -300px;
+    width: 250px;
+    height: 255px;
     z-index: 2;
-    border-radius: 5px;
+    border-radius: 3px;
     background-color: #292d38;
-    transition: right 500ms;
-    display: none;
-    .menu-item-logo {
-      height: 15px;
-      width: 15px;
-    }
-    .menu-item-name {
-      color: #e2e2e2;
-    }
-  }
-  // account-dropdown khi active
-  .account-dropdown.active {
-    right: 10px;
-    width: 230px;
-    height: 240px;
+    transition: right 550ms;
     color: #e2e2e2;
     display: flex;
     flex-direction: column;
@@ -671,6 +656,26 @@ header {
       }
     }
     .menu-item-container:last-child {
+      margin-top: 10px;
+      padding: 20px 0px;
+      margin-top: 14px;
+      border-top: 1px solid #313645;
+      .menu-item-name {
+        color: $col-red-dt;
+      }
+    }
+    .menu-item-logo {
+      height: 15px;
+      width: 15px;
+    }
+    .menu-item-name {
+      color: #e2e2e2;
+    }
+  }
+  // account-dropdown khi active
+  .account-dropdown.active {
+    right: 10px;
+    item-container:last-child {
       margin-top: 10px;
       padding: 20px 0px;
       margin-top: 14px;
