--- a/scss/order-book.css
+++ b/scss/order-book.css
@@ -84,9 +84,6 @@ body {
 .menu-item-container {
   padding: 20px;
 }
-.menu-item-container .item-logo {
-  filter: invert(78%) sepia(68%) saturate(956%) hue-rotate(339deg) brightness(92%) contrast(96%);
-}
 
 .menu-item-container:first-child {
   display: flex;
@@ -250,7 +247,7 @@ body {
   margin-bottom: 5px;
 }
 .menuHide .icon-menuHide {
-  filter: invert(100%) sepia(0%) saturate(2%) hue-rotate(158deg) brightness(106%) contrast(101%);
+  color: white;
 }
 
 .menuHide,
@@ -395,4 +392,4 @@ body {
     display: flex;
   }
 }
-/*# sourceMappingURL=trade.css.map */
+/*# sourceMappingURL=order-book.css.map */
