--- a/scss/order-book.scss
+++ b/scss/order-book.scss
@@ -72,6 +72,7 @@ body {
     margin: 0px;
     align-items: center;
     list-style: none;
+    cursor: pointer;
   }
 }
 .navbar__item {
@@ -169,7 +170,6 @@ body {
   position: relative;
   .sidebar-orderbook {
     position: absolute;
-    padding-top: 25px;
     left: -300px;
     top: 60px;
     width: 280px;
@@ -181,6 +181,48 @@ body {
   .sidebar-orderbook.active {
     left: 0;
   }
+}
+.sidebar-orderbook {
+  display: flex;
+  flex-direction: column;
+  .orderBook__container {
+    display: flex;
+    align-items: center;
+    padding: 0px 30px;
+  }
+  .orderBook__container:first-child {
+    img {
+      padding-right: 12px;
+      height: 16px;
+      filter: invert(79%) sepia(34%) saturate(1486%) hue-rotate(344deg)
+        brightness(95%) contrast(89%);
+    }
+    .orderBook-name {
+      color: #a0a3af;
+    }
+    .orderBook-name:hover {
+      color: $col-orange;
+    }
+  }
+  .orderBook__container:not(:nth-child(1)) {
+    padding-top: 34px;
+    img:last-child {
+      height: 6px;
+    }
+    .orderBook-name {
+      color: #6f767e;
+      padding-left: 15px;
+    }
+    .orderBook-name:hover {
+      color: $col-orange;
+    }
+    .dropdown-orderBook-logo {
+      margin-left: auto;
+    }
+  }
+}
+.orderBook__container:first-child {
+  padding-top: 30px;
 }
 
 // end-click sổ lệnh
@@ -210,6 +252,7 @@ body {
     color: $col-white;
   }
   .star {
+    cursor: pointer;
     height: 18px;
     width: 28px;
     background-color: #cf422f;
@@ -242,6 +285,7 @@ body {
   .account__box {
     display: flex;
     align-items: center;
+    cursor: pointer;
     span {
       color: $col-white;
       padding-right: 10px;
@@ -266,6 +310,8 @@ body {
   }
 }
 .menuHide {
+  filter: invert(100%) sepia(0%) saturate(7459%) hue-rotate(85deg)
+    brightness(101%) contrast(104%);
   height: 25px;
   width: 25px;
   padding: 0px 10px;
@@ -407,6 +453,7 @@ body {
   }
   .header__content {
     .header__logo {
+      cursor: pointer;
       a {
         .lg-name {
           margin-left: 15px;
