--- a/scss/order-book.scss
+++ b/scss/order-book.scss
@@ -163,7 +163,6 @@ body {
     flex-direction: column;
     color: #6f767e;
     visibility: hidden;
-    transition: 500ms;
     .sub-menu-item {
       padding: 15px 35px;
     }
@@ -248,10 +247,11 @@ body {
   height: 100px;
   left: 50px;
   top: 30px;
+  width: 70%;
+  visibility: hidden;
 }
 
 .submenu__container {
-  width: 70%;
   .submenu-item {
     color: #6f767e;
     padding: 8px 0px 8px 10px;
@@ -262,6 +262,12 @@ body {
     color: $col-white;
   }
 }
+.orderBook__container {
+  .submenu__container.active {
+    visibility: visible;
+  }
+}
+
 // end-click sổ lệnh
 // header__right
 .header__right {
