--- a/scss/order-book.scss
+++ b/scss/order-book.scss
@@ -96,16 +96,17 @@ body {
   .sidebar-asset-container {
     padding-top: 25px;
     position: fixed;
-    left: -300px;
+    // left: -300px;
+    left: 0px;
     top: 60px;
     width: 280px;
     height: calc(100vh - 60px);
     background-color: $bg-sidebar;
     transition: left 500ms;
   }
-  .sidebar-asset-container.active {
-    left: 0px;
-  }
+  // .sidebar-asset-container.active {
+  //   left: 0px;
+  // }
 }
 .menu-item-container {
   padding: 20px;
@@ -154,6 +155,7 @@ body {
 .menu-item-container {
   position: relative;
   .sub-container {
+    border-left: 2px solid #6f767e;
     position: absolute;
     top: 70px;
     left: 0px;
@@ -163,6 +165,7 @@ body {
     flex-direction: column;
     color: #6f767e;
     visibility: hidden;
+    transition: top 5s;
     .sub-menu-item {
       padding: 15px 35px;
     }
@@ -174,6 +177,11 @@ body {
     visibility: visible;
   }
 }
+
+.dropdown-orderBook-logo.click {
+  -webkit-transform: rotate(180deg); /* Safari */
+  transform: rotate(180deg);
+}
 // end event click tài sản
 
 // event click sổ lệnh
@@ -181,7 +189,8 @@ body {
   position: relative;
   .sidebar-orderbook {
     position: absolute;
-    left: -300px;
+    // left: -300px;
+    left: 0px;
     top: 60px;
     width: 280px;
     height: calc(100vh - 60px);
@@ -189,9 +198,9 @@ body {
     transition: left 500ms;
     z-index: 2;
   }
-  .sidebar-orderbook.active {
-    left: 0;
-  }
+  // .sidebar-orderbook.active {
+  //   left: 0;
+  // }
 }
 .sidebar-orderbook {
   display: flex;
