--- a/scss/trade.scss
+++ b/scss/trade.scss
@@ -93,8 +93,9 @@ body {
 //event khi click tài sản
 .header__wrap {
   .sidebar-asset-container {
-    padding-top: 25px;
-    position: fixed;
+    // padding-top: 25px;
+    position: absolute;
+    // left: 0px;
     left: -300px;
     top: 60px;
     width: 280px;
@@ -146,6 +147,11 @@ body {
 .dropdown-logo {
   margin-left: auto;
 }
+.dropdown-logo.onclick {
+  -webkit-transform: rotate(180deg); /* Safari */
+  transform: rotate(180deg);
+  margin-right: 0px;
+}
 
 .menu-item-container {
   position: relative;
@@ -164,6 +170,12 @@ body {
     .sub-menu-item:hover {
       color: $col-orange;
     }
+  }
+  .sub-container {
+    visibility: hidden;
+  }
+  .sub-container.active {
+    visibility: visible;
   }
 }
 // end event click tài sản
@@ -186,7 +198,6 @@ body {
     left: 0;
   }
 }
-
 // end-click sổ lệnh
 // header__right
 .header__right {
